syntax = "proto3";

option go_package = "./protocol";

package protocol;

service SomeServer {
  rpc SomeMethod(RequestParam) returns (ResponseData) {}
}

message RequestParam {
  string Name = 1;
  int32 Age = 2;
}

message ResponseData {
  string Result = 1;
}